# iron-man-features

./: .gitignore  README.md  connection.py  elo_ratings.json  elos.csv  pyproject.toml
data/: feature_list.json  feature_list_simple.json
iron_man_features/: datasets.py  elo_system.py  main.py  queries.py
iron_man_features/config/: __init__.py
iron_man_features/data_manager/: connection.py  downloads.py  preparation.py
iron_man_features/features/: __init__.py  calculation_functions.py  categorical.py  games_played_last_days.py  historical_average.py  historical_sum.py  model_feature.py  moving_average.py  simple_feature.py
iron_man_features/queries/: games_for_elo.sql  matches_to_predict.sql  team_games.sql
iron_man_features/sql_queries/: games_for_elo.sql  matches_to_predict.sql  team_games.sql
