[tool.poetry]
name = "iron-man-features"
version = "0.1.0"
description = ""
authors = ["Mauro Bernardes de Assis Neto <maurobernardesan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
pymysql = "^1.1.1"
cryptography = "^43.0.3"
sqlalchemy = "^2.0.36"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
